	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/DirectXTKModelViewer_Desktop_2013.vcxproj
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/DirectXTKModelViewer_Desktop_2013.vcxproj.filters
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/DirectXTKModelViewer_Desktop_2015.sln
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/DirectXTKModelViewer_Desktop_2015.vcxproj
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/DirectXTKModelViewer_Desktop_2015.vcxproj.filters
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/DirectXTKModelViewer_XDK_2015.sln
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/DirectXTKModelViewer_XDK_2015.vcxproj
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/DirectXTKModelViewer_XDK_2015.vcxproj.filters
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/Game.cpp
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/Game.h
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/LICENSE
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/Logo.png
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/Main.cpp
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/Package.appxmanifest
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/ReadMe.txt
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/SmallLogo.png
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/SplashScreen.png
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/StepTimer.h
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/StoreLogo.png
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/comic.spritefont
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/consolas.spritefont
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/directx.ico
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/pch.cpp
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/pch.h
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/resource.rc
