@@ -105,9 +105,10 @@
       L963, 44:R#.34   @腿长和车架上管计算公式 腿长*0.65=上管cm，例子 75*0.65=48.75cm
       L972, 45:R#.35   @svn E155037 以前的操作没有完成
       L980, 46:R#.36   @matrix 操作
-     Zndex_E : //z 2015-12-04 14:55:27 L.27 '32673 T3244298901.K ~1025+----+----+----+----+----+
-     TimeCnt : //z 2015-12-04 14:37:03 L.27 '33777 T3241998863.K ~60  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-12-04 11:46:13 L.27 '44027 T3663712269.K ~41  +----+----+----+----+----+
+     Zndex_E : //z 2015-12-07 14:40:13 L.24 '33587 T3446337389.K ~1041+----+----+----+----+----+
+     TimeCnt : //z 2015-12-07 14:04:12 L.24 '35748 T3441737452.K ~61  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-12-07 14:04:10 L.24 '35750 T3441737450.K ~42  +----+----+----+----+----+
+     #42  R+ : //z 2015-12-07 14:04:10 L.24 '35750 T3441737450.K ~42    V+.1068 L+.1137 
      #41  R+ : //z 2015-12-04 11:46:13 L.27 '44027 T3663712269.K ~41    V+.1032 L+.1096 
      #40  R+ : //z 2015-12-03 14:32:34 L.28 '34046 T3174017901.K ~40    V+.1024 L+.1086 
      #39  R+ : //z 2015-11-24 20:09:36 L.37 '13824 T884673682 .K ~39    V+.1020 L+.1070 
@@ -153,7 +154,9 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-12-04 14:55:27 L.27 '32673 T3244298901.K ~1066  R+.41   L+.1121 --+----+
+     Version : //z 2015-12-07 14:40:13 L.24 '33587 T3446337389.K ~1083  R+.42   L+.1140 --+----+
+     #57  V+ : //z 2015-12-07 14:40:13 L.24 '33587 T3446337389.K ~1083  R+.42   L+.1140 
+     #56  R+ : //z 2015-12-07 14:04:10 L.24 '35750 T3441737450.K ~1068  R+.42   L+.1138 V+.1068 
      #56  V+ : //z 2015-12-04 14:53:58 L.27 '32762 T3244227127.K ~1064  R+.41   L+.1117 
      #55  V+ : //z 2015-12-04 11:50:30 L.27 '43770 T3664682631.K ~1045  R+.41   L+.1108 
      #54  R+ : //z 2015-12-04 11:46:13 L.27 '44027 T3663712269.K ~1032  R+.41   L+.1097 V+.1032 
@@ -1130,3 +1133,9 @@ Intel® GPA Frame Analyzer
 Deferred Shading in DirectX 10 (with Ambient Occlusion)
 http://blog.shayanjaved.com/2011/06/26/deferred-shading-dx10/
 #endregion //z 2015-12-04 11:46:13 L.27 '44027 BG57IV3@XCL T3663712269.K.F4146951713-+----+----+
+
+#region 12-07 14:04 R#.42   @NVIDIA Professional Graphics Samples
+//z 2015-12-07 14:04:12 L.24 '35748 T3441737452.K[T61,L1137,R42,V1069]
+01. nvidia 例子
+https://github.com/nvpro-samples
+#endregion //z 2015-12-07 14:04:10 L.24 '35750 BG57IV3@XCL T3441737450.K.F4146951713-+----+----+
