@@ -6183,3 +6183,14 @@ Changes to be committed:
 	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/pch.h
 	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/resource.rc
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2015/12/07.18_08_03.99.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
